RESOLVED FIXED305385
HTTPS upgrade behaviour with HTTPS Only logic may be applied incorrectly when PSON occurs
https://bugs.webkit.org/show_bug.cgi?id=305385
Summary HTTPS upgrade behaviour with HTTPS Only logic may be applied incorrectly when...
ronan_turner
Reported 2026-01-13 06:08:04 PST
Attachments
ronan_turner
Comment 1 2026-01-16 04:49:14 PST
EWS
Comment 2 2026-01-25 03:56:52 PST
Committed 306166@main (a2a9dc4ec4d0): <https://commits.webkit.org/306166@main> Reviewed commits have been landed. Closing PR #56705 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.